--- a/client/src/screens/account/account.scss
+++ b/client/src/screens/account/account.scss
@@ -58,6 +58,10 @@
         font-weight: 500;
         color: #1868b7;
         cursor: pointer;
+
+        a{
+          color: #1868b7;
+        }
       }
     }
   }
