--- a/client/src/components/ui/banner/banner.scss
+++ b/client/src/components/ui/banner/banner.scss
@@ -134,6 +134,18 @@
       width: 55%;
       max-width: 550px;
     }
+
+    > svg{
+      max-width: 500px;
+
+      @media (max-width: 991px){
+        max-width: 326px;
+      }
+
+      @media (max-width: 767px){
+        max-width: 500px;
+      }
+    }
   }
 
   &__productImage{
