--- a/client/src/screens/product/product.scss
+++ b/client/src/screens/product/product.scss
@@ -9,6 +9,43 @@
     height: 24px;
   }
 
+  &--loading{
+
+    .product--loading-wrap{
+      width: 90%;
+      margin: 20px auto;
+      display: flex;
+      justify-content: space-between;
+
+      @media (max-width: 767px){
+        flex-direction: column;
+      }
+
+      div{
+        width: calc(50% - 20px);
+
+        @media (max-width: 767px){
+          width: 100%;
+        }
+      }
+  
+      div:first-child{
+        display: flex;
+        flex-direction: column;
+  
+        svg:first-child{
+          margin-bottom: 30px;
+        }
+      }
+    }
+
+    svg{
+      max-width: initial;
+      height: auto;
+      width: 100%;
+    }
+  }
+
   &__box{
     display: flex;
     flex-wrap: wrap;
