--- a/client/src/screens/account/account.scss
+++ b/client/src/screens/account/account.scss
@@ -101,7 +101,7 @@
       position: fixed;
       content: '';
       width: 100vw;
-      height: 100vw;
+      height: 100vh;
       background-color: rgba(0,0,0,.65);
       z-index: 1;
       top: 0;
